# FastShop

./: README.md  main.py  pyproject.toml  requirements.txt
api/v1/: auth.py  collections.py  orders.py  products.py
core/: auth_services.py  db.py
models/: shop_models.py
schemas/: shop_schemas.py
